[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iclab_historical_data"
dynamic = ["description", "version"]
authors = [
  { name = "Zack Weinberg et al", email = "zack.iclab@owlfolio.org" },
]
license = {file = "COPYING"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.10" # only because not tested with anything older
dependencies = [
  "genson >=1.2.0",
  "pyasn >=1.6.0",
]

[project.optional-dependencies]
dev = [
    "flake8 >=6.0.0",
    "mypy >=1.1.0",
    "pre-commit >=3.1.0",
    "yapf >=0.32.0",
]

[project.urls]
Home = "https://iclab.org/"

[project.scripts]
extract-schemas    = "iclab_historical_data.commands.extract_schemas:main"
recompress-tree    = "iclab_historical_data.commands.recompress_tree:main"
reorganize-results = "iclab_historical_data.commands.reorganize_results:main"

[tool.flit.sdist]
exclude = [
   ".gitignore",
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_module_docstring = true
blank_line_before_nested_class_or_def = false
coalesce_brackets = true
dedent_closing_brackets = true
indent_dictionary_value = true
join_multiple_lines = false
split_before_dot = true
split_complex_comprehension = true
split_penalty_logical_operator = 0
